# ros2_ws

./: README.md  frames_2025-06-17_23.11.29.gv  frames_2025-06-19_01.39.28.gv  frames_2025-06-19_01.40.07.gv  frames_2025-06-19_01.41.05.gv  frames_2025-06-19_22.10.33.gv  frames_2025-06-19_22.11.34.gv  frames_2025-06-20_23.17.39.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/lidar_odometry/share/lidar_odometry/: package.sh
install/my_robot_description/share/my_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_robot_description/share/my_robot_description/cmake/: my_robot_descriptionConfig-version.cmake  my_robot_descriptionConfig.cmake
install/my_robot_description/share/my_robot_description/config/: slam_toolbox_params.yaml
install/my_robot_description/share/my_robot_description/environment/: ament_prefix_path.dsv  path.dsv
install/my_robot_description/share/my_robot_description/launch/: display.launch.py  my_robot_launch.py  slam_toolbox_launch.py
install/my_robot_description/share/my_robot_description/urdf/: my_robot.urdf.xacro
log/: latest_build
src/my_robot_bringup/: package.xml  setup.py
src/my_robot_bringup/launch/: my_robot_launch.py
src/my_robot_description/: CMakeLists.txt
src/my_robot_description/config/: slam_toolbox_params.yaml
src/my_robot_description/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/my_robot_description/launch/: slam_toolbox_launch.py
src/my_robot_description/log/: latest_build
(+64 files in other folders)
